patch(react-accordion): prevents initial height transition jump

--- a/packages/accordion/partials/Collapsible/style.css
+++ b/packages/accordion/partials/Collapsible/style.css
@@ -1,6 +1,6 @@
 .g-collapsible {
   overflow: hidden;
-  height: auto;
+  height: 0px;
   transition: height 0.3s;
 
   & .inner {
